Norwegian translation updates, thanks to Stein-Aksel Basma.
The MySQL, PostgreSQL, Filesystem Backup and Backup Configuration Files modules now all support the use of Webmin variable substitutions in backup paths (like $HOSTNAME) via a new Module Config option.
---- Changes since 1.580 ----
Even more German translation updates, thanks to Raymond Vetter.
More Dutch updates, thanks to Gandyman.
Catalan updates, thanks to Jaume Badiella.
Norwegian updates, thanks to Stein-Aksel Basma.
All languages now have UTF-8 encoded variants, as well as their native character sets.
Added support for Ubuntu 12.04.
---- Changes since 1.590 ----
Even more German translation updates, thanks to Raymond Vetter.
Norwegian updates, thanks to Stein-Aksel Basma.
Dutch translation updates, thanks to Gandyman.
Switch order of command and mode in debug logs to make it clear that "mode=X" is part of the log, not part of the command.
Added the new Gray Framed Theme, and made it the default for new installs.
---- Changes since 1.600 ----
Even more German translation updates, thanks to Raymond Vetter.
Catalan updates, thanks to Jaume Badiella.
---- Changes since 1.610 ----
Norwegian updates, thanks to Stein-Aksel Basma.
Catalan updates, thanks to Jaume Badiella.
Yet more German translation updates, thanks to Raymond Vetter.
Polish translation updates from Piotr Kozica.
---- Changes since 1.620 ----
More German translation updates, thanks to Raymond Vetter.
Polish translation updates from Piotr Kozica.
Norwegian updates, thanks to Stein-Aksel Basma.
Improved FreeBSD 8 and 9 support across multiple modules.
Hungarian translation updates from Balázs Zoltán.
---- Changes since 1.650 ----
More German translation updates, thanks to Raymond Vetter.
Norwegian updates, thanks to Stein-Aksel Basma.
---- Changes since 1.660 ----
More German translation updates, thanks to Raymond Vetter.
Norwegian updates, thanks to Stein-Aksel Basma.
Catalan updates, thanks to Jaume Badiella.