@@ -190,3 +190,4 @@ Norwegian updates, thanks to Stein-Aksel Basma.
 More German translation updates, thanks to Raymond Vetter.
 Norwegian updates, thanks to Stein-Aksel Basma.
 Catalan updates, thanks to Jaume Badiella.
+IPv6 access control now match an address exactly, unless a network size is entered.
